<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rapidrentals.Fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.example.rapidrentals.Fragment.BookingFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.rapidrentals.Fragment.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.rapidrentals.Fragment.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

</navigation>