<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Activity.CarAddActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/calibri"
            android:text="Car Details"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include layout="@layout/content_gallery_only" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_brand_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_brand"
            android:hint="@string/car_brand">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_model_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_model"
            android:hint="@string/car_model">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_type_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_type"
            android:hint="@string/car_type">

            <AutoCompleteTextView
                android:id="@+id/car_type_atv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_seat_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_seats"
            android:hint="@string/car_seats">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_year_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_year"
            android:hint="@string/car_year">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_fuel_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_fuel"
            android:hint="@string/car_fuel">

            <AutoCompleteTextView
                android:id="@+id/car_fuel_atv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_transmisison_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_transmission"
            android:hint="@string/car_transmission">

            <AutoCompleteTextView
                android:id="@+id/car_transmission_atv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_reg_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_reg_number"
            android:hint="@string/car_reg_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/calibri"
            android:text="Rent Details"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_rent_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:contentDescription="@string/car_rent"
            android:hint="@string/car_rent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/car_available_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:checked="true"
            android:text="Car Available"
            app:thumbTint="@color/colorPrimaryDark"
            app:trackTint="@color/colorPrimary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/driver_available_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:checked="true"
            android:text="Driver Available"
            app:thumbTint="@color/colorPrimaryDark"
            app:trackTint="@color/colorPrimary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/car_location_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_element_bottom_margin"
            android:checked="true"
            android:text="Use Current Location"
            app:thumbTint="@color/colorPrimaryDark"
            app:trackTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#000"
                android:fontFamily="@font/muli_black"
                android:onClick="onClickCancel"
                android:text="Cancel"
                android:textColor="#fff"
                android:transitionName="button_trans" />

            <Button
                android:id="@+id/car_add_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#000"
                android:fontFamily="@font/muli_black"
                android:onClick="onClickAddCar"
                android:text="Add"
                android:textColor="#fff"
                android:transitionName="button_trans" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>